# python-smsfly

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  LICENSE.md  LICENSE.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  smsfly.py  tox.ini  versiontools.py
src/: smsfly.py
src/smsfly/: __init__.py  errors.py  smsfly.py  util.py  versiontools.py
src/tests/: api_test.py  mocks.py
