[aliases]
release = clean --all sdist bdist_wheel

[wheel]
universal = 1

[metadata]
name = SMSFly
version = attr: versiontools.get_self_version
url = https://github.com/open-craft-guild/python-smsfly
project_urls =
    Bug Tracker = https://github.com/open-craft-guild/python-smsfly/issues
    CI: Travis = https://travis-ci.org/open-craft-guild/python-smsfly
    Source Code = https://github.com/open-craft-guild/python-smsfly
description = Python wrapper for SMS-Fly gateway API
long_description = file: README.rst, CHANGELOG.rst
author = Sviatoslav Sydorenko (@webknjaz) <wk+open-craft-guild@sydorenko.org.ua>, Anna Kurylo <anna.kurilo21+open-craft-guild@gmail.com>
author_email = wk+open-craft-guild@sydorenko.org.ua
license = MIT
license_file = LICENSE.rst
classifiers =
    Development Status :: 3 - Alpha

    Environment :: Plugins
    Environment :: Web Environment

    Intended Audience :: Developers

    License :: OSI Approved :: MIT License

    Operating System :: OS Independent

    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Session

    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    api
    sms
    gateway
    sms-fly
    requests
    xml

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find_namespace:
zip_safe = False
include_package_data = True

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
# NOTE: cryptography is an optional dependency of pyjwt
install_requires =
    beautifulsoup4[lxml] == 4.5.3
    requests == 2.13.0

tests_require =
    nose
    coverage

test_suite = nose.collector

[options.packages.find]
where = src

[options.extras_require]
dev =
   ipdb == 0.10.0
   ipdbplugin == 1.4.5
   pre-commit == 0.12.2
test =
   nose == 1.3.7
   pre-commit == 0.12.2
   httpretty == 0.8.14
